--- a/Dockerfile-web
+++ b/Dockerfile-web
@@ -1,8 +1,9 @@
 FROM php:7.2-apache
 
-COPY ../file-web /var/www/html/
+WORKDIR /var/www/html/
 # WORKDIR /var/www/html/
+COPY ./file-web /var/www/html/
 # CMD [ "php", "./your-script.php" ]
-RUN docker-php-extinstall pdo pdo_mysql
+RUN docker-php-ext-install pdo_mysql
 
 HEALTHCHECK CMD curl --fail http://localhost || exit 0 
