--- a/nginx - stack.conf
+++ b/nginx - stack.conf
@@ -3,7 +3,7 @@
 #sesuaikan bagian proxy_pass dengan nama service yang Anda gunakan. Jika anda menggunakan service web dan service pma, maka sudah sesuai dan tidak perlu diubah kembali.
 
 server {
-    server_name www.domainsaya.local www.domainsaya.local; 
+    server_name www.domainsaya.local www.profesor.id; 
 
   location / {
     # web reverse proxy follow
@@ -16,7 +16,7 @@ server {
 }
 
 server { 
-    server_name pma.domainsaya.local pma.domainsaya.local;
+    server_name pma.domainsaya.local pma.profesor.id;
 
   location / {
     # pma reverse proxy settings follow
