--- a/docker-compose-stack.yml
+++ b/docker-compose-stack.yml
@@ -4,8 +4,8 @@ services:
 
   web:
     build:
-        context: ./web
-        dockerfile: Dockerfile
+        context: .
+        dockerfile: Dockerfile-eb
     image: finalproject-web
     networks:
       - int_net
@@ -20,14 +20,14 @@ services:
       restart_policy:
         condition: always
 
-  db:
+  mysql:
     build:
-        context: ./mysql
-        dockerfile: Dockerfile
+        context: .
+        dockerfile: Dockerfile-mysql
     image: finalproject-mysql
     environment:
       # MYSQL_ROOT_PASSWORD: my_secret_password
-      MYSQL_RANDOM_ROOT_PASSWORD: YES 
+      MYSQL_RANDOM_ROOT_PASSWORD: 1 
       MYSQL_DATABASE: dbkuasai
       MYSQL_USER: cilsykuasaiuser
       MYSQL_PASSWORD: cilsykuasaipassword
@@ -47,8 +47,8 @@ services:
 
   pma:
     build:
-        context: ./pma
-        dockerfile: Dockerfile
+        context: .
+        dockerfile: Dockerfile-pma
     image: finalproject-pma
     environment:
       PMA_HOST: db
@@ -67,8 +67,8 @@ services:
   
   proxy:
     build:
-        context: ./proxy
-        dockerfile: Dockerfile
+        context: .
+        dockerfile: Dockerfile-proxy
     image: finalproject-proxy
     links:
       - pma
@@ -77,6 +77,7 @@ services:
       - 80:80
     networks:
       - ext_net
+      - proxy_net
     deploy:
       replicas: 3
       update_config:
@@ -94,7 +95,3 @@ networks:
 volumes:
   v_web:
   v_db:
-
-secrets:
-  psql_pass:
-    file: ./psql_pass.txt
