--- a/docker-compose-stack.yml
+++ b/docker-compose-stack.yml
@@ -15,12 +15,11 @@ services:
         parallelism: 2
         delay: 10s
       restart_policy:
-        condition: always
+        condition: on-failure
 
   mysql:
     image: finalproject-mysql
     environment:
-      # MYSQL_ROOT_PASSWORD: my_secret_password
       MYSQL_RANDOM_ROOT_PASSWORD: 1 
       MYSQL_DATABASE: dbkuasai
       MYSQL_USER: cilsykuasaiuser
@@ -37,7 +36,7 @@ services:
         parallelism: 2
         delay: 10s
       restart_policy:
-        condition: always
+        condition: on-failure
 
   pma:
     image: finalproject-pma
@@ -54,7 +53,7 @@ services:
         parallelism: 2
         delay: 10s
       restart_policy:
-        condition: always
+        condition: on-failure
   
   proxy:
     image: finalproject-proxy
@@ -72,7 +71,7 @@ services:
         parallelism: 2
         delay: 10s
       restart_policy:
-        condition: always
+        condition: on-failure
 
 
 networks:
