--- a/docker-compose-stack.yml
+++ b/docker-compose-stack.yml
@@ -41,7 +41,7 @@ services:
   pma:
     image: ardellio/finalproject-pma
     environment:
-      PMA_HOST: db
+      PMA_HOST: mysql
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
     networks:
